--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
-      "express": "2.5.8"
-  },"engines": {
-      "node": "0.6.13",
-      "npm": "1.1.41"
+      "express": "3.x"
+  }, "engines": {
+      "node": "0.8.21",
+      "npm": "1.2.11"
   }
 }
